<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.panda</groupId>
	<artifactId>resource</artifactId>
	<version>1.2.1-SNAPSHOT</version>

	<repositories>
		<repository>
			<id>panda</id>
			<name>Pathway and Data Analysis Maven Repo</name>
			<url>https://raw.githubusercontent.com/PathwayAndDataAnalysis/repo/master/maven-repo/</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>ossrh-public</id>
			<name>OSSRH Maven Repository</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2-beta-5</version>
					<configuration>
						<finalName>mutex</finalName>
						<appendAssemblyId>false</appendAssemblyId>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
						<archive>
							<manifest>
								<mainClass>org.panda.resource.XXX</mainClass>
								<addClasspath>true</addClasspath>
							</manifest>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<dependencies>
		<dependency>
			<groupId>org.panda</groupId>
			<artifactId>utility</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.biopax.paxtools</groupId>
			<artifactId>paxtools-core</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.biopax.paxtools</groupId>
			<artifactId>paxtools-query</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.biopax.paxtools</groupId>
			<artifactId>pattern</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.3</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>panda.local</id>
			<name>Pathway and Data Analysis Local Repository</name>
			<url>file://${basedir}/../repo/maven-repo/</url>
		</repository>
	</distributionManagement>

</project>
